# KratosUtils

./: .gitignore  CMakeLists.txt  README.md  Readme.md  app1.cpp  app1.hpp  app2.cpp  app2.hpp  core.cpp  core.hpp  define.hpp  test_all.cpp  test_app2.cpp  test_core.cpp
.github/workflows/: ccpp.yml  ccpp.yml.disabled
MiniKratos/: CMakeLists.txt  app1.hpp  app2.cpp  configure.sh  core.cpp  define.hpp  test_app1.cpp
MiniKratos/cmake_build/: compile.sh
Mpi/BoostPythonDel/: CMakeLists.txt  README.md  mpiProxy.cpp  test.py  test_in_class.py  test_raw.py
SYCL/: CMakeLists.txt  build.sh
SYCL/src/example_1/: vec_scal.cpp
SYCL/src/example_2/: vec_sycl.cpp
SYCL/src/example_3/: vec_sycl.cpp
SYCL/src/utils/: perf.h
Scripts/: amazonNight.sh
Snippets/Accessor/: CMakeLists.txt  accessor.cpp
Snippets/AutoRegister/: CMakeCache.txt  CMakeLists.txt  Makefile  auto_register  cmake_install.cmake  register.cpp
Snippets/BoostPython_MPI_Finalizer/: README.md  mpiProxy.hpp  mpiProxyWrapper.cpp  test_with_context.py
Snippets/HeaderDefinition/: README.md
Snippets/HeaderDefinition/unit1/: class_declaration.h  class_instantiation.cpp
Snippets/HeaderDefinition/unit2/: CMakeLists.txt  class_instantiation.cpp
Snippets/HeaderDefinition/unit3/: class_definition.h  class_instantiation.cpp
Snippets/MpiPortComm/: client.py  server.py  start_prte_server.sh
Snippets/MpiPortComm/cpp/: CMakeLists.txt  client.cpp  server.cpp  start_client.sh  start_server.sh
Snippets/MpiPortComm/python/: client.py  server.py  start_client.sh  start_server.sh
Snippets/ODR_Violation/: CMakeLists.txt  main.cpp
Snippets/ODR_Violation/unit1/: CMakeLists.txt  class_definition.h
Snippets/ODR_Violation/unit2/: class_definition.h
Snippets/ODR_Violation/unit3/: CMakeLists.txt
Snippets/PartialSpecSfinae/: CMakeLists.txt  condition.h  main.cpp  wall_law.h
Snippets/PyBindForwardConstructor/: CMakeLists.txt  export.cpp  export.py  export_user.py
Snippets/Pybind11ExportRaw/: CMakeLists.txt
Snippets/PythonAutodiscover/: base.py  main.py  user_1.py  user_2.py  user_3.py  user_4.py  user_5.py
Snippets/SyclMatrixStencil/: configure.sh
Snippets/SyclMatrixStencil/src/: CMakeLists.txt  main.cpp
Snippets/SymbolShadow/: CMakeLists.txt  README.md
Snippets/SymbolShadow/common/: variable.h
Snippets/SymbolShadow/unit1/: CMakeLists.txt  Makefile  cmake_install.cmake  library.h
Snippets/SymbolShadow/unit2/: CMakeLists.txt  Makefile  cmake_install.cmake  library.h
Snippets/TensorView/: CMakeLists.txt  bind.cpp  bind.py  configure.sh
Snippets/TensorView/include/: container_types.hpp  data_types.hpp  tensor_view.hpp
Snippets/TensorView/src/: main.cpp
Snippets/TfNonEagerCModule/: CMakeLists.txt  add_op.cpp  graph.md  noneager.cpp  noneager.py
Snippets/TypelessRegister/: register.cpp
